- styling the docs

--- a/test/styles/syntax.css
+++ b/test/styles/syntax.css
@@ -13,19 +13,21 @@ code
 	font-size: 1.2em;
 }
 
-.syntax
-{
-	border: 1px solid silver;
-	background: #EEEEEE;
-	padding: 0.125em 0.5em;
-	line-height: 1.75em;
-}
-
 .example
 {
+	background-color: #FFFFFF;
+	border: 1px solid silver;
+	border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	box-shadow: 0 0 4px #DDDDDD;
+	-moz-box-shadow: 0 0 4px #DDDDDD;
+	-webkit-box-shadow: 0 0 4px #DDDDDD;
 	display: block;
+	padding: 0.125em 0.5em;
 	padding: 1em;
 	margin: auto 4em;
+	line-height: 1.75em;
 }
 code.example
 {
