--- a/test/styles/browsers.css
+++ b/test/styles/browsers.css
@@ -20,7 +20,7 @@
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
-	/*-webkit-box-shadow: 0 0 5px #999999;*/
+	-webkit-box-shadow: 0 0 5px #999999;
 	-moz-box-shadow: 0 0 5px #999999;
 	box-shadow: 0 0 5px #999999;
 }
