--- a/test/styles/main.css
+++ b/test/styles/main.css
@@ -1,8 +1,14 @@
 @font-face
 {
 	font-family: 'LeagueGothicRegular';
-	src: url('fonts/League_Gothic-webfont.eot');
-	src: local('☺'), url('fonts/League_Gothic-webfont.ttf') format('truetype');
+	src: local('☺'), url(fonts/League_Gothic-webfont.ttf) format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face
+{
+	font-family: 'LeagueGothicRegularIE';
+	src: url(fonts/League_Gothic-webfont.eot);
 	font-weight: normal;
 	font-style: normal;
 }
@@ -21,7 +27,7 @@ body
 .logo, .logo a:link, .logo a:hover, .logo a:active, .logo a:visited
 {
 	color: #999;
-	font-family: LeagueGothicRegular, 'League Gothic', 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
+	font-family: LeagueGothicRegular, 'League Gothic', Helvetica, Tahoma, Arial, sans-serif;
 	font-size: 125px;
 	margin: 0 auto 0.25em;
 	padding: 0;
@@ -29,6 +35,10 @@ body
 	text-decoration: none;
 	text-shadow: 0px -1px 1px silver;
 	white-space: nowrap;
+}
+.ua-ie .logo, .ua-ie .logo a:link, .ua-ie .logo a:hover, .ua-ie .logo a:active, .ua-ie .logo a:visited
+{
+	font-family: LeagueGothicRegularIE, 'League Gothic', Helvetica, Impact, Arial, sans-serif;
 }
 
 .logo .sel
@@ -158,7 +168,7 @@ a.minimal:active
 	float: left;
 	height: 200px;
 	line-height: 1.75em;
-	margin: 1% 5%;
+	margin: 1% 0 1% 7%;
 	padding: 0.125em 0.5em;
 
 	width: 20em;
@@ -185,11 +195,19 @@ a.minimal:active
 
 .box a.minimal
 {
-	margin: 0.25em 0 0.25em 0;
+	margin: 0.25em;
 	text-transform: lowercase;
+}
+
+.box a.glow
+{
+	box-shadow: 0 0 4px #FFCC00;
+	-moz-box-shadow: 0 0 4px #FFCC00;
+	-webkit-box-shadow: 0 0 4px #FFCC00;
 }
 
 .action-info
 {
+	font-style: italic;
 	white-space: nowrap;
 }
