--- a/test/styles/main.css
+++ b/test/styles/main.css
@@ -101,23 +101,18 @@ footer
 	text-align: right;
 }
 
-a::-moz-focus-inner
-{
-	border: 0;
-}
-
 /* http://ubuwaits.github.com/css3-buttons/ */
 
 a.minimal:link, a.minimal:visited
 {
 	background: #e3e3e3;
 	border: 1px solid #ccc;
+	border-radius: 3px;
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
-	border-radius: 3px;
-	-moz-box-shadow: inset 0 0 1px 1px #f6f6f6;
-	-webkit-box-shadow: inset 0 0 1px 1px #f6f6f6;
-	box-shadow: inset 0 0 1px 1px #f6f6f6;
+	box-shadow: inset 0px 0px 1px 1px #f6f6f6;
+	-moz-box-shadow: inset 0px 0px 1px 1px #f6f6f6;
+	-webkit-box-shadow: inset 0px 0px 1px 1px #f6f6f6;
 	color: #333;
 	display: inline-block;
 	font-family: "helvetica neue", helvetica, arial, sans-serif;
@@ -134,18 +129,18 @@ a.minimal:link, a.minimal:visited
 a.minimal:hover
 {
 	background: #d9d9d9;
-	-moz-box-shadow: inset 0 0 1px 1px #eaeaea;
-	-webkit-box-shadow: inset 0 0 1px 1px #eaeaea;
-	box-shadow: inset 0 0 1px 1px #eaeaea;
+	box-shadow: inset 0px 0px 1px 1px #eaeaea;
+	-moz-box-shadow: inset 0px 0px 1px 1px #eaeaea;
+	-webkit-box-shadow: inset 0px 0px 1px 1px #eaeaea;
 	color: #222;
 }
 
 a.minimal:active
 {
 	background: #d0d0d0;
-	-moz-box-shadow: inset 0 0 1px 1px #e3e3e3;
-	-webkit-box-shadow: inset 0 0 1px 1px #e3e3e3;
-	box-shadow: inset 0 0 1px 1px #e3e3e3;
+	box-shadow: inset 0px 0px 1px 1px #e3e3e3;
+	-moz-box-shadow: inset 0px 0px 1px 1px #e3e3e3;
+	-webkit-box-shadow: inset 0px 0px 1px 1px #e3e3e3;
 	color: #000;
 }
 
@@ -162,9 +157,9 @@ a.minimal:active
 	border-radius: 4px;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
-	box-shadow: 0 0 4px #DDDDDD;
-	-moz-box-shadow: 0 0 4px #DDDDDD;
-	-webkit-box-shadow: 0 0 4px #DDDDDD;
+	box-shadow: 0px 0px 4px #DDDDDD;
+	-moz-box-shadow: 0px 0px 4px #DDDDDD;
+	-webkit-box-shadow: 0px 0px 4px #DDDDDD;
 	float: left;
 	height: 200px;
 	line-height: 1.75em;
@@ -201,9 +196,9 @@ a.minimal:active
 
 .box a.glow
 {
-	box-shadow: 0 0 4px #FFCC00;
-	-moz-box-shadow: 0 0 4px #FFCC00;
-	-webkit-box-shadow: 0 0 4px #FFCC00;
+	box-shadow: 0px 0px 4px #FFCC00;
+	-moz-box-shadow: 0px 0px 4px #FFCC00;
+	-webkit-box-shadow: 0px 0px 4px #FFCC00;
 }
 
 .action-info
