- adding to docs

--- a/test/styles/syntax.css
+++ b/test/styles/syntax.css
@@ -26,7 +26,7 @@ code
 	display: block;
 	padding: 0.125em 0.5em;
 	padding: 1em;
-	margin: auto 4em;
+	margin: auto 180px auto 4em;
 	line-height: 1.75em;
 }
 code.example
