making use of .js & .no-js in demo

--- a/test/styles/browsers.css
+++ b/test/styles/browsers.css
@@ -256,6 +256,11 @@
 	background-image: url(browsers/Mozilla_128.png);
 }
 
+.no-js .js-enabled,
+.js .js-disabled {
+	display: none;
+}
+
 @media print
 {
 	.browser-info
