--- a/test/styles/browsers.css
+++ b/test/styles/browsers.css
@@ -4,8 +4,7 @@
 	browser info stylesheet
 */
 
-.browser-info
-{
+.browser-info {
 	clear: right;
 	float: right;
 	margin: 10px 0 10px 10px;
@@ -25,45 +24,39 @@
 	box-shadow: 0px 0px 5px #999999;
 }
 .ua-ie-5 .browser-info,
-.ua-ie-6 .browser-info
-{
+.ua-ie-6 .browser-info {
 	/* IE6 24-bit PNGs lack alpha */
 	background-color: #C8D0D4;/*#C1CACF;*/
 	/*border-color: #999999;*/
 }
 
-.browser-info
-{
+.browser-info {
 	background-image: url(browsers/Unknown_128.png);
 	padding-top: 150px;
 }
 
 /* Trident-based browsers */
-.ua-ie .browser-info
-{
+.ua-ie .browser-info {
 	border-color: #50BEF2;
 	border-top-color: #FFE446;
 	border-left-color: #FFE446;
 	background-image: url(browsers/IE9_128.png);
 }
 .ua-ie-8 .browser-info,
-.ua-ie-7 .browser-info
-{
+.ua-ie-7 .browser-info {
 	border-color: #0979CF;
 	border-top-color: #F6B718;
 	border-left-color: #F6B718;
 	background-image: url(browsers/IE7_128.png);
 }
-.ua-ie-6 .browser-info
-{
+.ua-ie-6 .browser-info {
 	border-color: #37A9F4;
 	border-top-color: #ADEFFD;
 	border-left-color: #ADEFFD;
 	background-image: url(browsers/IE6_128.png);
 	height: 128px;
 }
-.ua-ie-5-5 .browser-info
-{
+.ua-ie-5-5 .browser-info {
 	border-color: #2E5AFF;
 	border-top-color: #FFD573;
 	border-left-color: #FFD573;
@@ -73,8 +66,7 @@
 }
 
 /* Presto-based browsers */
-.ua-opera .browser-info
-{
+.ua-opera .browser-info {
 	border-color: #3B4959;
 	border-top-color: #961D1F;
 	border-left-color: #961D1F;
@@ -82,23 +74,20 @@
 }
 
 /* WebKit-based browsers */
-.ua-webkit .browser-info
-{
+.ua-webkit .browser-info {
 	border-color: #2D3494;
 	border-top-color: #DDBB7A;
 	border-left-color: #DDBB7A;
 	background-image: url(browsers/WebKit_128.png);
 }
-.ua-safari .browser-info
-{
+.ua-safari .browser-info {
 	border-color: #1758A4;
 	border-top-color: #999999;
 	border-left-color: #999999;
 	background-image: url(browsers/Safari_128.png);
 }
 .ua-chrome .browser-info,
-.ua-crios .browser-info
-{
+.ua-crios .browser-info {
 	border-color: #2BAB33;
 	border-top-color: #FFD600;
 	border-left-color: #FFD600;
@@ -114,40 +103,34 @@
 .ua-chrome-7 .browser-info,
 .ua-chrome-8 .browser-info,
 .ua-chrome-9 .browser-info,
-.ua-chrome-10 .browser-info
-{
+.ua-chrome-10 .browser-info {
 	background-image: url(browsers/Chrome_128.png);
 }
-.ua-silk .browser-info
-{
+.ua-silk .browser-info {
 	border-color: #0176E0;
 	border-top-color: #F78013;
 	border-left-color: #F78013;
 	background-image: url(browsers/Silk_128.png);
 }
-.ua-fluidapp .browser-info
-{
+.ua-fluidapp .browser-info {
 	border-color: #0E4EB7;
 	border-top-color: #7AB35D;
 	border-left-color: #7AB35D;
 	background-image: url(browsers/Fluid_128.png);
 }
-.ua-phantomjs .browser-info
-{
+.ua-phantomjs .browser-info {
 	border-color: #008D92;
 	border-top-color: #00CDD7;
 	border-left-color: #00CDD7;
 	background-image: url(browsers/PhantomJS_128.png);
 }
-.ua-shiira .browser-info
-{
+.ua-shiira .browser-info {
 	border-color: #0198C2;
 	border-top-color: #A86FE6;
 	border-left-color: #A86FE6;
 	background-image: url(browsers/Shiira_128.png);
 }
-.ua-omniweb .browser-info
-{
+.ua-omniweb .browser-info {
 	border-color: #2B84EA;
 	border-top-color: #62AE0C;
 	border-left-color: #62AE0C;
@@ -156,8 +139,7 @@
 
 /* KHTML-based browsers */
 .ua-khtml .browser-info,
-.ua-konqueror .browser-info
-{
+.ua-konqueror .browser-info {
 	border-color: #5CAFFF;
 	border-top-color: #E0E0E6;
 	border-left-color: #E0E0E6;
@@ -165,113 +147,120 @@
 }
 
 /* Gecko-based browsers */
-.ua-gecko .browser-info
-{
+.ua-gecko .browser-info {
 	border-color: #075090;
 	border-top-color: #2394C7;
 	border-left-color: #2394C7;
 	background-image: url(browsers/Gecko_128.png);
 }
-.ua-firebird .browser-info
-{
+.ua-firebird .browser-info {
 	border-color: #FB0F0C;
 	border-top-color: #F96611;
 	border-left-color: #F96611;
-	background-image: url(browsers/Firebird_48.png);
+	background-image: url(browsers/Firebird2003_128.png);
 	background-position: center 40px;
 }
-.ua-firefox .browser-info
-{
+.ua-firefox .browser-info {
 	border-color: #DE730C;
 	border-top-color: #F9BE00;
 	border-left-color: #F9BE00;
-	background-image: url(browsers/Firefox35_128.png);
+	background-image: url(browsers/Firefox2013_128.png);
+}
+.ua-firefox-22 .browser-info,
+.ua-firefox-21 .browser-info,
+.ua-firefox-20 .browser-info,
+.ua-firefox-19 .browser-info,
+.ua-firefox-18 .browser-info,
+.ua-firefox-17 .browser-info,
+.ua-firefox-16 .browser-info,
+.ua-firefox-15 .browser-info,
+.ua-firefox-14 .browser-info,
+.ua-firefox-13 .browser-info,
+.ua-firefox-12 .browser-info,
+.ua-firefox-11 .browser-info,
+.ua-firefox-10 .browser-info,
+.ua-firefox-9 .browser-info,
+.ua-firefox-8 .browser-info,
+.ua-firefox-7 .browser-info,
+.ua-firefox-6 .browser-info,
+.ua-firefox-5 .browser-info,
+.ua-firefox-4 .browser-info,
+.ua-firefox-3 .browser-info {
+	background-image: url(browsers/Firefox2009_128.png);
 }
 .ua-firefox-3-1 .browser-info,
 .ua-firefox-3-0 .browser-info,
 .ua-firefox-2 .browser-info,
-.ua-firefox-1 .browser-info,
-.ua-firefox-0 .browser-info
-{
-	border-color: #DE730C;
-	border-top-color: #F9BE00;
-	border-left-color: #F9BE00;
-	background-image: url(browsers/Firefox_128.png);
+.ua-firefox-1 .browser-info {
+	background-image: url(browsers/Firefox2005_128.png);
 }
-.ua-seamonkey .browser-info
-{
+.ua-firefox-1-1 .browser-info,
+.ua-firefox-1-0 .browser-info,
+.ua-firefox-0 .browser-info {
+	background-image: url(browsers/Firefox2004_128.png);
+}
+.ua-seamonkey .browser-info {
 	border-color: #2424E4;
 	border-top-color: #8484FE;
 	border-left-color: #8484FE;
 	background-image: url(browsers/SeaMonkey_128.png);
 }
-.ua-camino .browser-info
-{
+.ua-camino .browser-info {
 	border-color: #5C8FD6;
 	border-top-color: #E5E5E5;
 	border-left-color: #E5E5E5;
 	background-image: url(browsers/Camino_128.png);
 }
-.ua-flock .browser-info
-{
+.ua-flock .browser-info {
 	border-color: #9A9FA4;
 	border-top-color: #358DEC;
 	border-left-color: #358DEC;
 	background-image: url(browsers/Flock_128.png);
 }
-.ua-epiphany .browser-info
-{
+.ua-epiphany .browser-info {
 	border-color: #526F8B;
 	border-top-color: #358B35;
 	border-left-color: #358B35;
 	background-image: url(browsers/Epiphany_64.png);
 	background-position: center 32px;
 }
-.ua-galeon .browser-info
-{
+.ua-galeon .browser-info {
 	border-color: #2B468D;
 	border-top-color: #A6CBF1;
 	border-left-color: #A6CBF1;
 	background-image: url(browsers/Galeon_128.png);
 }
-.ua-k-meleon .browser-info
-{
+.ua-k-meleon .browser-info {
 	border-color: #B24E51;
 	border-top-color: #7BBA4A;
 	border-left-color: #7BBA4A;
 	background-image: url(browsers/K-Meleon_82.png);
 	background-position: center 23px;	
 }
-.ua-netscape .browser-info
-{
+.ua-netscape .browser-info {
 	border-color: #12424E;
 	border-top-color: #36ABB1;
 	border-left-color: #36ABB1;
 	background-image: url(browsers/Netscape_128.png);
 }
-.ua-netscape-8 .browser-info
-{
+.ua-netscape-8 .browser-info {
 	background-image: url(browsers/Netscape8_128.png);
 }
-.ua-netscape-9 .browser-info
-{
+.ua-netscape-9 .browser-info {
 	background-image: url(browsers/Netscape9_128.png);
 }
-.ua-icab .browser-info
-{
+.ua-icab .browser-info {
 	border-color: #FA2C2C;
 	border-top-color: #FFD00A;
 	border-left-color: #FFD00A;
 	background-image: url(browsers/iCab3_128.png);
 }
-.ua-icab-4 .browser-info
-{
+.ua-icab-4 .browser-info {
 	background-image: url(browsers/iCab4_128.png);
 }
 
 /* Mozilla catch all */
-.ua-mozilla .browser-info
-{
+.ua-mozilla .browser-info {
 	border-color: #024690;
 	border-top-color: #3688E0;
 	border-left-color: #3688E0;
@@ -283,24 +272,20 @@
 	display: none;
 }
 
-@media print
-{
-	.browser-info
-	{
+@media print {
+	.browser-info {
 		background-color: white !important;
 		border-color: black !important;
 	}
 }
 
-.ua-test ul
-{
+.ua-test ul {
 	float: left;
 	width: 25%;
 	margin-top: 0.5em;
 	margin-bottom: 0.5em;
 }
-.ua-test li
-{
+.ua-test li {
 	text-decoration: line-through;
 	white-space: nowrap;
 }
@@ -385,8 +370,7 @@
 .ua-icab .is-icab,
 .ua-icab-2 .is-icab-2,
 .ua-icab-4 .is-icab-4,
-.ua-icab-4 .is-icab-4
-{
+.ua-icab-4 .is-icab-4 {
 	font-weight: bold;
 	color: #CC0000;
 	background-color: #FFFF00;
